force-app/main/default/objects/Relationship__c/Relationship__c.object-meta.xml
<CustomObject>
    <description>Custom object to track a contact-to-contact relationships.</description>
    <label>Relationship</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Relationship #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>