force-app/main/default/objects/Relationship__c/fields/Activity_Information__c.field-meta.xml
<CustomField>
    <fullName>Activity_Information__c</fullName>
    <formula>&quot;# Activities LTM = &quot;+TEXT(Number_of_Activities_LTM__c)+&quot; / Last Activity Date = &quot;+TEXT(Last_Activity_Date__c)</formula>
    <label>Activity Information</label>
    <type>Text</type>
</CustomField>