force-app/main/default/objects/Relationship__c/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <formula>TEXT(HL_Contact__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HL Contact Status</label>
    <type>Text</type>
</CustomField>