force-app/main/default/objects/Relationship__c/fields/Created_From__c.field-meta.xml
<CustomField>
    <fullName>Created_From__c</fullName>
    <label>Origination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact Record</fullName>
                <default>true</default>
                <label>Contact Record</label>
            </value>
            <value>
                <fullName>Automatic - Activities Logged</fullName>
            </value>
            <value>
                <fullName>Automatic - Engagement Team</fullName>
            </value>
            <value>
                <fullName>Automatic - Opportunity Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>