force-app/main/default/objects/Relationship__c/fields/External_Contact__c.field-meta.xml
<CustomField>
    <fullName>External_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>External Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No external contacts met the criteria for your search.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>External Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HL Relationships</relationshipLabel>
    <relationshipName>Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>