force-app/main/default/objects/Relationship__c/fields/External_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Name__c</fullName>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp; External_Contact__r.LastName &amp; &quot;, &quot; &amp; External_Contact__r.FirstName, &quot;&quot;, &apos;_parent&apos;) &amp; 
HYPERLINK(&quot;/&quot; &amp;  Id ,   External_Contact__r.LastName &amp; &quot;, &quot; &amp; External_Contact__r.FirstName ,&apos;_parent&apos;)</formula>
    <label>External Contact Name</label>
    <type>Text</type>
</CustomField>