force-app/main/default/objects/Relationship__c/fields/External_Contact_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Name_Text__c</fullName>
    <formula>External_Contact__r.Contact_Full_Name__c</formula>
    <label>External Contact Name Text</label>
    <type>Text</type>
</CustomField>