force-app/main/default/objects/Relationship__c/fields/External_Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Source__c</fullName>
    <formula>External_Contact__r.Contact_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Contact Source</label>
    <type>Text</type>
</CustomField>