force-app/main/default/objects/Relationship__c/fields/Familiarity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Familiarity_Rating__c</fullName>
    <label>Familiarity Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>