force-app/main/default/objects/Relationship__c/fields/HL_Contact__c.field-meta.xml
<CustomField>
    <fullName>HL_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>HL Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No Houlihan employees met the criteria for your search.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>