force-app/main/default/objects/Relationship__c/fields/HL_Contact_Acquired_From__c.field-meta.xml
<CustomField>
    <fullName>HL_Contact_Acquired_From__c</fullName>
    <formula>HL_Contact__r.Acquired_From__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HL Contact Acquired From</label>
    <type>Text</type>
</CustomField>