force-app/main/default/objects/Relationship__c/fields/My_Relationship__c.field-meta.xml
<CustomField>
    <fullName>My_Relationship__c</fullName>
    <formula>$User.Id = HL_Contact__r.User__c</formula>
    <label>My Relationship</label>
    <type>Checkbox</type>
</CustomField>