force-app/main/default/objects/Relationship__c/fields/Number_of_Activities_LTM__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Activities_LTM__c</fullName>
    <label># of Activities LTM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>