force-app/main/default/objects/Relationship__c/fields/Number_of_Deals_Closed_Together__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deals_Closed_Together__c</fullName>
    <label>Number of Deals Closed Together</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>