force-app/main/default/objects/Relationship__c/fields/Number_of_Deals_on_Client_External_Team__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deals_on_Client_External_Team__c</fullName>
    <label># of Deals on Client/External Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>