force-app/main/default/objects/Relationship__c/fields/Number_of_Deals_Shown__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deals_Shown__c</fullName>
    <label># of Deals Shown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>