force-app/main/default/objects/Relationship__c/fields/Outlook_Categories__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Categories__c</fullName>
    <inlineHelpText>Enter the categories this contact should be assigned in Outlook separated by commas.  The category must match the Outlook category exactly.</inlineHelpText>
    <label>Outlook Categories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>