force-app/main/default/objects/Relationship__c/fields/Personal_Note__c.field-meta.xml
<CustomField>
    <fullName>Personal_Note__c</fullName>
    <inlineHelpText>This is a private field.  It is only visible to you and your delegates.</inlineHelpText>
    <label>Personal Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>