force-app/main/default/objects/Relationship__c/fields/Related_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Related_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship</label>
    <referenceTo>Relationship__c</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>