force-app/main/default/objects/Relationship__c/fields/Report_External_Contact_Fields__c.field-meta.xml
<CustomField>
    <fullName>Report_External_Contact_Fields__c</fullName>
    <formula>External_Contact__r.Contact_Full_Name__c  + &apos;|01|&apos; + External_Contact__r.FirstName + &apos;|02|&apos; + External_Contact__r.MiddleName + &apos;|03|&apos; + External_Contact__r.LastName + &apos;|04|&apos; + External_Contact__r.Title + &apos;|05|&apos; + External_Contact__r.Email + &apos;|06|&apos; + External_Contact__r.Phone + &apos;|07|&apos; + External_Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report External Contact Fields</label>
    <type>Text</type>
</CustomField>