force-app/main/default/objects/Relationship__c/fields/Share_Active_Deal__c.field-meta.xml
<CustomField>
    <fullName>Share_Active_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Engagement</label>
    <type>Checkbox</type>
</CustomField>