force-app/main/default/objects/Relationship__c/fields/Share_Open_Opp__c.field-meta.xml
<CustomField>
    <fullName>Share_Open_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Opportunity</label>
    <type>Checkbox</type>
</CustomField>