force-app/main/default/objects/Relationship__c/fields/Strength_Rating__c.field-meta.xml
<CustomField>
    <fullName>Strength_Rating__c</fullName>
    <inlineHelpText>High - Contact would return your call
Medium - You have met this contact and they would know who you are
Low - You have an association with this contact</inlineHelpText>
    <label>Strength Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>