force-app/main/default/objects/Relationship__c/fields/Sync_to_Outlook__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Outlook__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync to Outlook</label>
    <type>Checkbox</type>
</CustomField>