force-app/main/default/objects/Relationship__c/fields/Unique_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Unique_Relationship__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Relationship</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>