force-app/main/default/objects/Relationship__c/fields/Valid_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Valid_Unique_Key__c</fullName>
    <formula>IF(Unique_Relationship__c =  (HL_Contact__r.Id + External_Contact__r.Id), TRUE, FALSE)</formula>
    <label>Valid Unique Key</label>
    <type>Checkbox</type>
</CustomField>