force-app/main/default/objects/Relationship__c/fields/View_Details__c.field-meta.xml
<CustomField>
    <fullName>View_Details__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , &quot;View Details&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Details</label>
    <type>Text</type>
</CustomField>