force-app/main/default/objects/Relationship__c/fields/Willing_to_Make_Introduction__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_Make_Introduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to Make Introduction?</label>
    <type>Checkbox</type>
</CustomField>