force-app/main/default/objects/Relationship__c/validationRules/External_Contact_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>External_Contact_Lock</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( External_Contact__c)</errorConditionFormula>
    <errorDisplayField>External_Contact__c</errorDisplayField>
    <errorMessage>Do not change.</errorMessage>
</ValidationRule>