force-app/main/default/objects/Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>HL_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>