force-app/main/default/objects/Relationship__c/listViews/My_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Contacts</fullName>
    <columns>NAME</columns>
    <columns>External_Contact__c</columns>
    <columns>Company__c</columns>
    <columns>Strength_Rating__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Sync_to_Outlook__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Relationship__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Contacts</label>
</ListView>